added video watch to UI

--- a/youtube-web-client/app/navbar/navbar.module.css
+++ b/youtube-web-client/app/navbar/navbar.module.css
@@ -6,5 +6,13 @@
 }
 
 .logoContainer {
+    display: flex;
+    align-items: center;
     cursor: pointer;
+}
+
+.buttonContainer {
+    display: flex;
+    align-items: center;
+    gap: 20px; /* Adjust the gap as needed */
 }
