added api firestore read service  to webpage, much work to do :(

--- a/youtube-web-client/app/page.module.css
+++ b/youtube-web-client/app/page.module.css
@@ -1,3 +1,20 @@
-.thumbnail {
-    margin: 10px;
-}
+.container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .videoItem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 20px;
+    margin-bottom: 20px;
+  }
+  
+  .thumbnail {
+    margin-bottom: 10px;
+  }
+  
+  .title {
+    text-align: center;
+  }
